@@ -2,6 +2,10 @@
 
 ## Enhancements
 
+### IIS
+
+ * [Get-IisMimeMap](http://get-carbon.org/help/Get-IisMimeMap.html), [Remove-IisMimeMap](http://get-carbon.org/help/Remove-IisMimeMap.html), and [Set-IisMimeMap](http://get-carbon.org/help/Set-IisMimeMap.html) now support managing MIME types for websites, virtual directories, and applications.
+
 ### Services
 
  * [Install-Service](http://get-carbon.org/help/Install-Service.html) now supports setting a command to run when a service fails.
